# d2ds

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Dota_Bot/bot/: .env  catboosth5.h5  main.py  tgbot_db.db
Dota_Bot/bot/handlers/: predict_items.py
managers/: mongo_manager.py
parsing/: config.py  parsing scheme.drawio  script.py  stratz_query.py  utils.py
