[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "d2ds"
description = "master project about data science and dota2"
authors = []
version = "0.1.0"
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pre-commit = "^3.0.0"
flake8 = "^6.0"
black = "^23.5"
